# cwsl

./: LICENSE  README.md  pyproject.toml
examples/: 01_cwsl_vs_rmse.ipynb  02_compare_multiple_models.ipynb  03_model_selection_cwsl.ipynb  04_entity_R_balance.ipynb  05_keras_cwsl_vs_mse.ipynb  06_electric_barometer.ipynb  cwsl_demo.ipynb  demo_food_actuals.csv
src/cwsl/: __init__.py  auto_engine.py  compare.py  costs.py  cwsl_regressor.py  dataframe.py  electric_barometer.py  metrics.py  scorers.py  sensitivity.py  training.py
tests/: test_auto_engine.py  test_compare.py  test_costs_and_sensitivity.py  test_cwsl_regressor.py  test_dataframe.py  test_electric_barometer.py  test_entity_R.py  test_hierarchy.py  test_metrics.py  test_model_selection.py  test_panel.py  test_panel_entity_R.py  test_scorers.py
