[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cwsl"
version = "0.1.0"
description = "Cost-Weighted Service Loss (CWSL) — A framework for asymmetric forecast error evaluation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }

authors = [
    { name = "Kyle Corrie", email = "kcorrie@economistician.com" }
]

keywords = [
    "forecasting",
    "operations",
    "time series",
    "asymmetric",
    "cost-weighted",
    "error metrics",
    "readiness",
    "CWSL",
]

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5"
]

[project.urls]
Homepage = "https://github.com/Economistician/cwsl"
Source = "https://github.com/Economistician/cwsl"
Issues = "https://github.com/Economistician/cwsl/issues"

[tool.setuptools.packages.find]
where = ["src"]